log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: log-output
spec:
    replicas: 1
    selector:
        matchLabels:
            app: log-output
    template:
        metadata:
            labels:
                app: log-output
        spec:
            volumes: # Define volume
                - name: shared-image
                  persistentVolumeClaim:
                      claimName: image-claim
            containers:
                - name: log-writer
                  image: nikogenix/log-writer:v1
                  resources:
                      limits:
                          memory: 512Mi
                          cpu: "1"
                  volumeMounts: # Mount volume
                      - name: shared-image
                        mountPath: /usr/src/app/files
                - name: log-reader
                  image: nikogenix/log-reader:v2
                  resources:
                      limits:
                          memory: 512Mi
                          cpu: "1"
                  volumeMounts: # Mount volume
                      - name: shared-image
                        mountPath: /usr/src/app/files
