log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: log-output-svc
spec:
    type: ClusterIP
    selector:
        app: log-output
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 3006
