log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: log-output
    labels:
        name: log-output
spec:
    rules:
        - http:
              paths:
                  - path: /info
                    pathType: Prefix
                    backend:
                        service:
                            name: log-output-svc
                            port:
                                number: 3012
                  - path: /pingpong
                    pathType: Prefix
                    backend:
                        service:
                            name: ping-pong-svc
                            port:
                                number: 3011
